<resources>
    <string name="app_name">CoraConnect</string>
    <string name="get_suggestion">Get Suggestion</string>
    <string name="coraconnect">CoraConnect</string>
    <string name="stay_connected_while_on_the_move">Stay connected while on the move</string>
    <string name="enter_time_e_g_morning_dinner_night">Enter time (e.g., Morning, Dinner, Night)</string>
    <string name="reset">Reset</string>
</resources>