<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/edtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/coraconnect"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/stay_connected_while_on_the_move"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#E0E0E0"
        android:hint="@string/enter_time_e_g_morning_dinner_night"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#616161" />

    <Button
        android:id="@+id/btnGetSuggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_suggestion"
        android:padding="12dp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnReset"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/reset"
        android:textColor="#DD2C00" />

    <TextView
        android:id="@+id/edtSuggestionDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="italic"
        android:gravity="center"
        android:padding="16dp"/>

</LinearLayout>